feat: ported to java 8 with jabel
Signed-off-by: SettingDust <settingdust@gmail.com>